// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders snapshot 1`] = `
<body>
  <div>
    <a
      href="/3"
    >
      <div
        class="card "
      >
        <div
          class="card__deathCharacter"
        />
        <img
          alt="Luna"
          class="card__image"
          src="https://images92.fotosik.pl/634/ba88b64387a4d385med.jpg"
        />
        <div
          class="card__information"
        >
          <p
            class="card__information-name"
          >
            LUNA
          </p>
          <p>
            info character
          </p>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`renders snapshot when character in  living 1`] = `
<body>
  <div>
    <a
      href="/3"
    >
      <div
        class="card dndBorder"
      >
        <img
          alt="Luna"
          class="card__image"
          src="https://images92.fotosik.pl/634/ba88b64387a4d385med.jpg"
        />
        <div
          class="card__information"
        >
          <p
            class="card__information-name"
          >
            LUNA
          </p>
          <p>
            info character
          </p>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`renders snapshot when character in cthulhu 1`] = `
<body>
  <div>
    <a
      href="/3"
    >
      <div
        class="card cthulhuBorder"
      >
        <div
          class="card__deathCharacter"
        />
        <img
          alt="Luna"
          class="card__image"
          src="https://images92.fotosik.pl/634/ba88b64387a4d385med.jpg"
        />
        <div
          class="card__information"
        >
          <p
            class="card__information-name"
          >
            LUNA
          </p>
          <p>
            info character
          </p>
        </div>
      </div>
    </a>
  </div>
</body>
`;

exports[`renders snapshot when character in dnd 1`] = `
<body>
  <div>
    <a
      href="/3"
    >
      <div
        class="card dndBorder"
      >
        <div
          class="card__deathCharacter"
        />
        <img
          alt="Luna"
          class="card__image"
          src="https://images92.fotosik.pl/634/ba88b64387a4d385med.jpg"
        />
        <div
          class="card__information"
        >
          <p
            class="card__information-name"
          >
            LUNA
          </p>
          <p>
            info character
          </p>
        </div>
      </div>
    </a>
  </div>
</body>
`;
